--- a/package.json
+++ b/package.json
@@ -10,12 +10,18 @@
   "private": true,
   "dependencies": {
     "@nrwl/next": "15.3.0",
+    "@tanstack/react-query": "^4.19.1",
+    "@trpc/client": "^10.4.3",
+    "@trpc/next": "^10.4.3",
+    "@trpc/react-query": "^10.4.3",
+    "@trpc/server": "^10.4.3",
     "core-js": "^3.6.5",
     "next": "13.0.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "regenerator-runtime": "0.13.7",
-    "tslib": "^2.3.0"
+    "tslib": "^2.3.0",
+    "zod": "^3.19.1"
   },
   "devDependencies": {
     "@babel/preset-react": "^7.14.5",
@@ -51,6 +57,7 @@
     "nx": "15.3.0",
     "postcss": "8.4.19",
     "prettier": "^2.6.2",
+    "prisma": "4.7.1",
     "react-test-renderer": "18.2.0",
     "tailwindcss": "3.2.4",
     "ts-jest": "28.0.5",
