--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "private": true,
   "dependencies": {
     "@nrwl/next": "15.3.0",
+    "@prisma/client": "4.7.1",
     "@tanstack/react-query": "^4.19.1",
     "@trpc/client": "^10.4.3",
     "@trpc/next": "^10.4.3",
