--- a/libs/prisma/.env.example
+++ b/libs/prisma/.env.example
@@ -4,7 +4,7 @@
 # Prisma supports the native connection string format for PostgreSQL, MySQL, SQLite, SQL Server, MongoDB and CockroachDB.
 # See the documentation for all the connection string options: https://pris.ly/d/connection-strings
 
-DATABASE_URL="postgresql://user:password@localhost:5432/db_name?schema=public"
+DATABASE_URL="postgresql://boundless:<USE-PASSWORD-VALUE>@localhost:5432/boundess_db?schema=public"
 POSTGRES_DB=boundess_db
 POSTGRES_USER=boundless
 POSTGRES_PASSWORD=
